--- a/AgenticEconGameArchitecture_v3.ipynb
+++ b/AgenticEconGameArchitecture_v3.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -43,7 +43,16 @@
         "id": "Ot1PuACIp8bU",
         "outputId": "aa7442ae-2fd4-4e51-8dbe-2d37ebd8bba9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+            "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+          ]
+        }
+      ],
       "source": [
         "from langgraph.graph import Graph, StateGraph, START, END\n",
         "from langchain_groq import ChatGroq\n",
@@ -107,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 2,
       "metadata": {
         "id": "LVZwTMsw6Blj"
       },
@@ -154,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": 8,
       "metadata": {
         "id": "FNXvSr0lVQnC"
       },
@@ -217,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 9,
       "metadata": {
         "id": "AytmORuTVQrF"
       },
@@ -351,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": 6,
       "metadata": {
         "id": "s5wth6Xh3ci9"
       },
@@ -371,6 +380,7 @@
         "        self.initial_pot = state_parameters['game_pot']\n",
         "        self.max_iterations = state_parameters['iterations']\n",
         "\n",
+        "    \n",
         "        # Validate players\n",
         "        if not players:\n",
         "            raise ValueError(\"At least one player must be provided\")\n",
@@ -403,6 +413,7 @@
         "            print(previous_decisions)\n",
         "\n",
         "            prompt = player.prompt_template.format(\n",
+        "                # add id \n",
         "                num_players=len(self.players),\n",
         "                game_pot=state['game_pot'],\n",
         "                stages_left=state['iterations'] - state['stage_number'],\n",
